# evolutionary-dino

./: README.md  dino_params.txt  pyproject.toml
dino_neuron/: dino_neuron.py  play.py  trainning.py  trainning_params.py
dino_neuron/chrome_trex/: dinogame.py
